--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p data-translate="footer.copyright">&copy; 2024 Dra. Daniela Verdín. Todos los derechos reservados.</p>
+                <p data-translate="footer.copyright">&copy; 2024 Dra. Daniela Verdín. Todos los derechos reservados</p>
             </div>
         </div>
     </footer>
