--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="https://images.unsplash.com/photo-1609114762994-f2d1b1d9f6e2?w=400&h=250&fit=crop" alt="Ortodoncia">
+                        <img src="image/Captura de pantalla 2025-06-20 180043.jpg" alt="Ortodoncia">
                     </div>
                     <div class="service-content">
                         <h4 data-translate="home.services.orthodontics.title">Ortodoncia</h4>
@@ -280,7 +280,7 @@
                 
                 <div class="service-card">
                     <div class="service-image">
-                        <img src="https://images.unsplash.com/photo-1588776814546-1a17c8b0b4d4?w=400&h=250&fit=crop" alt="Implantes">
+                        <img src="image/Captura de pantalla 2025-06-20 180250.jpg" alt="Implantes">
                     </div>
                     <div class="service-content">
                         <h4 data-translate="home.services.implants.title">Implantes Dentales</h4>
